# conspospy

./: README.md  setup.cfg  setup.py
conspospy/: conspos.py  constants.py  mafft.py  pipeline.py  utils.py
