[metadata]
name = conspospy
version = attr: conspospy.__version__
url = https://github.com/yamasampo/conspospy
author = Division of Evolutionary Genetics in NIG
author_email = hyamashita@nig.ac.jp
license_file = LICENSE
description = conspospy: Python version of conspos package
long_description = file: README.md

[options]
packages = find:
install_requires = numpy
